--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": "^5.4 || ^7.0",
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
