--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "marketing",
         "services"
     ],
-    "homepage": "http://1up.io",
+    "homepage": "https://1up.io",
     "license": "MIT",
     "authors": [
         {
@@ -21,12 +21,14 @@
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "ext-json": "*",
+        "php": "^7.2.5 || ^8.0",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "require-dev": {
-        "leofeyer/optimize-native-functions-fixer": "^1.0",
-        "phpunit/phpunit": "~5.7"
+        "friendsofphp/php-cs-fixer": "^v2.19",
+        "phpstan/phpstan": "^0.12.90",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
