--- a/composer.json
+++ b/composer.json
@@ -10,23 +10,24 @@
         "marketing",
         "services"
     ],
-    "homepage": "http://1up.io",
+    "homepage": "https://1up.io",
     "license": "MIT",
     "authors": [
         {
             "name": "David Greminger",
             "email": "dg@1up.io",
-            "homepage": "http://1up.io",
+            "homepage": "https://1up.io",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": "^5.4 || ^7.0",
-        "guzzlehttp/guzzle": "~6.0"
+        "ext-json": "*",
+        "php": "^7.4 || ^8.0",
+        "guzzlehttp/guzzle": "^7.4.5"
     },
     "require-dev": {
-        "leofeyer/optimize-native-functions-fixer": "^1.0",
-        "phpunit/phpunit": "~5.7"
+        "friendsofphp/php-cs-fixer": "^3.9",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
